# colibri

./: .coveragerc  .gitignore  README.md  environment.yml  full_environment.yml  manual_install_instructions.md  pyproject.toml
.github/: codecov.yml  setup_conda_env.sh
colibri/: __init__.py  (+36 more)
colibri/examples/les_houches_example/: config.py  model.py  plot_pdf_fits.yaml  pyproject.toml
colibri/examples/les_houches_example/closure_test/: plot_pdfs.yaml
colibri/examples/les_houches_example/closure_test/runcard/: les_houches_runcard.yaml  lh_closure_test.yaml
colibri/examples/les_houches_example/les_houches/: app.py  model.py
colibri/examples/les_houches_example/les_houches_example/: app.py  config.py  model.py  play-model.py
colibri/examples/les_houches_example/model_specific_closure_test/: lh_theory.py
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/: bayes_metrics.csv  full_posterior_sample.csv  md5  ns_result.csv  pdf_model.pkl
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/input/: lockfile.yaml
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_1/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_10/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_100/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_11/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_12/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_13/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_14/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_15/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_16/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_17/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_18/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_19/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_2/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_20/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_21/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_22/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_23/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_24/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_25/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_26/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_27/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_28/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/les_houches_runcard/replicas/replica_29/: les_houches_runcard.exportgrid
colibri/examples/les_houches_example/model_specific_closure_test/output/: index.html  index.md  meta.yaml
colibri/examples/les_houches_example/model_specific_closure_test/output/input/: lockfile.yaml  runcard.yaml
colibri/examples/les_houches_example/runcard/: les_houches_runcard.yaml
colibri/examples/les_houches_example/runcard/les_houches_runcard/: md5  pdf_model.pkl
colibri/examples/les_houches_example/runcard/les_houches_runcard/input/: lockfile.yaml  runcard.yaml
colibri/examples/les_houches_example/runcards/: example_pdf_fit.yaml  les_houches_runcard.yaml  lh_fit_closure_test.yaml  lh_fit_closure_test_blackjax.yaml  lh_fit_model_specific_closure_test.yaml
colibri/examples/les_houches_example/runcards/example_pdf_fit/: bayes_metrics.csv  full_posterior_sample.csv  md5  ns_result.csv  pdf_model.pkl
colibri/examples/les_houches_example/runcards/example_pdf_fit/input/: lockfile.yaml
colibri/examples/les_houches_example/runcards/les_houches_runcard/: md5  pdf_model.pkl
colibri/examples/les_houches_example/runcards/les_houches_runcard/input/: lockfile.yaml  runcard.yaml
colibri/models/gp/: pyproject.toml
colibri/models/gp/gp/: __init__.py  api.py  app.py  config.py  model.py  utils.py
colibri/models/nnpdf_colibri/: pyproject.toml
colibri/models/nnpdf_colibri/nnpdf_colibri/: api.py  app.py  config.py  model.py
super_net/models/grid_pdf/: pyproject.toml
super_net/models/grid_pdf/grid_pdf/: __init__.py  analytic_fit.py  api.py  app.py  config.py  grid_pdf_fit.py  grid_pdf_lhapdf.py  grid_pdf_model.py  model.py  utils.py
super_net/ppdf/: pyproject.toml
super_net/ppdf/ppdf/: __init__.py  app.py  config.py  ppdf_model.py
(+466 files in other folders)
