[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "colibri_pdf"
version = "0.0.0"
authors = [ "PBSP collaboaration" ]
description = "A PDF fitting tool"
repository = "https://github.com/HEP-PBSP/colibri"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prompt_toolkit = "*"
h5py = "*"

jax = "*"
optax = "*"
flax = "*"
dill = "*"

# nnpdf dependency
nnpdf = { git = "https://github.com/NNPDF/nnpdf" }


[tool.poetry.extra]
test = [
    "pytest",
    "hypothesis",
]
doc = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme"
]

[tool.poetry.scripts]
colibri = "colibri.app:main"
evolve_fit = "colibri.scripts.evolve_fit:main"
mc_postfit = "colibri.scripts.mc_postfit:main"
resample_fit = "colibri.scripts.bayesian_resampler:main"
merge_mc_fits = "colibri.scripts.merge_mc_fits:main"
