[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "hep-colibri"
version = "0.1.0"
authors = [ "PBSP collaboration" ]
description = "A PDF fitting tool"
repository = "https://github.com/HEP-PBSP/colibri"
readme = "README.md"

packages = [
    { include = "colibri" }
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
prompt_toolkit = "*"
h5py = "*"

jax = "*"
optax = "*"
flax = "*"
dill = "*"

# Mark Sphinx and its extensions optional:
sphinx = {version="*", optional=true}
sphinxcontrib-bibtex = {version="*", optional=true}
sphinx-rtd-theme = {version="*", optional=true}
tabulate = {version="*", optional=true}
sphinx-copybutton = {version="*", optional=true}

# nnpdf dependency
nnpdf = { git = "https://github.com/NNPDF/nnpdf" }


[tool.poetry.extras]
test = [
    "pytest",
    "hypothesis",
]
doc = ["sphinxcontrib-bibtex", "sphinx-rtd-theme", "sphinx", "tabulate", "sphinx-copybutton"]

[tool.poetry.scripts]
colibri = "colibri.app:main"
evolve_fit = "colibri.scripts.evolve_fit:main"
mc_postfit = "colibri.scripts.mc_postfit:main"
resample_fit = "colibri.scripts.bayesian_resampler:main"
merge_mc_fits = "colibri.scripts.merge_mc_fits:main"
