[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ppdf"
author = "Mark N. Costantini"
author-email = "mnc33@cam.ac.uk"
home-page = "https://github.com/J-M-Moore/super_net"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "hypothesis",
]
doc = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme"
]

[tool.flit.scripts]
ppdf = "ppdf.app:main"