[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "les_houches_example"
version = "0.0.1"
authors = ["..."]
description = "Les Houches Parametrisation Example"

[tool.poetry.dependencies]


[tool.poetry.extras]
test = [
    "pytest",
    "hypothesis",
]
doc = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme"
]

[tool.poetry.scripts]
run_colibri = "les_houches.app:main"
