[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "les_houches_example"
version = "1.0.0"
authors = ["PBSP collaboration"]
description = "Les Houches Parametrisation Example"

[tool.poetry.dependencies]


[tool.poetry.extras]
test = [
    "pytest",
    "hypothesis",
]
doc = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme"
]

[tool.poetry.scripts]
les_houches_exe = "les_houches_example.app:main"
