[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "col_gp"
version = "0.0.0"
authors = ["PBSP Collaboration"]
description = "Gaussian Process Model of PDFs"

[tool.poetry.extras]
test = [
    "pytest",
    "hypothesis",
]
doc = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme"
]

[tool.poetry.scripts]
col_gp = "gp.app:main"
